--- a/src/components/MatchGame/index.css
+++ b/src/components/MatchGame/index.css
@@ -73,3 +73,43 @@
   align-items: center;
   flex-wrap: wrap;
 }
+
+/* GAME OVER CSS */
+.game-over-complete-container {
+  background-image: url('https://assets.ccbp.in/frontend/react-js/match-game-score-card-lg-bg.png');
+  background-size: cover;
+  background-position: center center;
+  padding: 20px;
+  height: 600px;
+  border-radius: 25px;
+  margin: 30px 0px 30px 0px;
+}
+.trophy-content-container {
+  position: relative;
+  top: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.trophy-style {
+  width: 250px;
+}
+.score-show-in-result {
+  font-size: 30px;
+  font-weight: bold;
+  margin: 20px 0px 20px 0px;
+}
+.play-gain-button {
+  background: none;
+  border: none;
+  background-color: #cf60c8;
+  padding: 10px 20px 10px 20px;
+  display: flex;
+  align-items: center;
+  border-radius: 15px;
+}
+.play-gain-text {
+  font-weight: bold;
+  margin-left: 10px;
+}
